--- a/Client/src/components/Product_card/Product_card.scss
+++ b/Client/src/components/Product_card/Product_card.scss
@@ -1,5 +1,34 @@
 .card {
     margin: 20px;
+    position: relative;
+    #favHeart {
+        position: absolute;
+        top: 10px;
+        right: 10px;
+        background-color: transparent;
+        border: none;
+        padding: 0;
+        margin: 0;
+        .fa-heart {
+            color: #807f7f;
+            font-size: 25px;
+        }
+        &:hover {
+            cursor: pointer;
+            .fa-heart {
+                color: #d8341e;
+                font-size: 25px;
+            }
+        }
+        &:focus {
+            outline-style: none;
+        }
+        .fav {
+            color: #d8341e;
+            transform: rotate(360deg);
+            transition: all .3s ease-in-out;
+        }
+    }
 }
 
 .card-generic_product-brand-name {
