--- a/Client/src/components/Footer/Footer.scss
+++ b/Client/src/components/Footer/Footer.scss
@@ -1,60 +1,62 @@
-.footer_container{
+body {
+    position: relative;
+}
+
+.footer_container {
     background-color: #3d414a;
-    font-family:  'Lato', sans-serif;
+    font-family: 'Lato', sans-serif;
+    bottom: 0;
     font-size: 16px;
     line-height: 24px;
     padding-left: 50px;
     padding-right: 50px;
     color: #9da5b2;
-    .social_bar{
-        border-bottom: 1px solid rgba(33,34,36,.15);
+    .social_bar {
+        border-bottom: 1px solid rgba(33, 34, 36, .15);
         padding-top: 24px;
         padding-bottom: 24px;
-        .social_bar_items{
+        .social_bar_items {
             display: flex;
             align-content: center;
             align-items: center;
             height: 25px;
             font-size: 25px;
-            i{
+            i {
                 cursor: pointer;
                 padding: 0px 12px;
                 margin-right: 12px;
             }
         }
     }
-    .rights_bar{
-        padding-top: 24px;
-        // padding-bottom: 24px;
+    .rights_bar {
+        padding-top: 24px; // padding-bottom: 24px;
         display: flex;
-        .copyrights{
+        .copyrights {
             flex: 1;
             font-weight: 700;
         }
-        .legel_Links{
+        .legel_Links {
             font-weight: 700;
-            a{
-                color: #9da5b2; 
+            a {
+                color: #9da5b2;
                 text-decoration: none;
                 cursor: pointer;
                 padding: 0px 12px;
                 margin-right: 12px;
-                &:hover{
+                &:hover {
                     text-decoration: underline;
                 }
             }
         }
-        .fca_paragraph{
+        .fca_paragraph {
             padding-bottom: 24px;
             flex-grow: 1;
             align-content: space-between;
-            p{
+            p {
                 text-align: justify;
                 font-size: 12px;
                 line-height: 18px;
             }
-        
         }
     }
-
 }
