--- a/Client/src/components/Layout/Car_choose.scss
+++ b/Client/src/components/Layout/Car_choose.scss
@@ -95,3 +95,10 @@
         }
     }
 }
+.drawer_header{
+    text-align: center;
+    font-size: 20px;
+    font-weight: bold;
+    padding: 10px 0;
+    border-bottom: 1px solid #8a8686;
+}
